[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[metadata]
name = rhoci 
author = Arie Bregman
author_email = bregman.arie@gmail.com
summary = TBA
version = 0.0.1
description-file = README.md
license = Apache License, Version 2.0
classifier =
    Topic :: Scientific/Engineering
    Topic :: System :: Distributed Computing
    Topic :: System :: Monitoring
    Environment :: Web
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    rhoci

[upload_sphinx]
upload-dir = docs/html

[wheel]
universal = 1 

[pbr]
skip_authors = True
skip_changelog = True

[entry_points]
console_scripts =
    rhoci-server=rhoci.server.cli:main
    rhoci-agent=rhoci.agent.cli:main
